# ginja

./: .gitignore  Makefile  README.md  any_test.go  benchmark_test.go  env.go  env_test.go  error.go  ffi.go  ffi_unix.go  ffi_windows.go  go.mod  go.sum  map_test.go  slice_test.go  struct_test.go  type.go  types.go  types_test.go  value.go
.github/workflows/: go.yaml  test_c.yaml  test_go.yaml
c/: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  README.md  Test.ps1  build.rs  cbindgen.toml  test
c/include/: minijinja.h
c/src/: env.rs  errors.rs  lib.rs  result.rs  types.rs
c/tests/: .clangd  append_test.cpp  base.cpp  basic_test.cpp  environment_test.cpp  error_test.cpp  list_test.cpp  render_string_test.cpp  test_base.h  value_test.cpp
internal/embed/: embed_darwin_amd64.go  embed_darwin_arm64.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_windows_amd64.go  embed_windows_arm64.go  libminijinja_c.darwin.arm64.dylib.zst  libminijinja_c.linux.amd64.so.zst  libminijinja_c.linux.arm64.so.zst  load.go  minijinja_c.windows.amd64.dll.zst
internal/ffi/: ffi.go  ffi_unix.go  ffi_windows.go
