[package]
name = "minijinja-c"
publish = false

authors = ["Hanchin Hsieh <me@yuchanns.xyz>"]
version = "0.1.0"
edition = "2024"
license = "apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.29.0"

[dependencies]
minijinja = { version="2.10.2", features=["loader"] }
